# kube-leaderelection

./: Cargo.toml
examples/: basics.rs
src/: builder.rs  elector.rs  lib.rs  wait.rs
src/lock/: lease_lock.rs  mod.rs
