[package]
name = "kube-leaderelection"
version = "0.1.0"
edition = "2018"
resolver = "2"

[dependencies]
kube = "0.57.0"
kube-runtime = "0.57.0"
k8s-openapi = { version = "0.12.0", default-features = false, features = ["v1_20"] }
async-trait = "0.1"
tokio = { version = "1", default-features = false, features = ["macros", "rt", "time"] }
tracing = { version = "0.1", default-features = false, features = ["log", "std"] }
rand = "0.8"

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
env_logger = "0.8"
log = "0.4"
